--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,11 @@ html, body {
   top: 50%;
   position: absolute;
 }
+
+html {
+  cursor: url('./assets/images/circle.svg'), auto;
+}
+
+.object {
+  cursor: url('./assets/images/circle.hover.svg'), auto;
+}
