--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ html, body {
 #root {
   width: 177.7777777777777vh;
   height: 100vh;
-  background-color: aqua;
+  /* background-color: aqua; */
 
   transform: translate(-50%, 0px);
   left: 50%;
